# jsx-vigo-bus-eta

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
docs/: CHALLEGE.md  OBSERVATIONS.md
docs/notebook/: endpoints.ipynb
netlify/functions/: fetchLineas.ts  fetchParadaETA.ts  fetchParadas.ts
src/: App.tsx
src/components/: NavBar.tsx
src/components/elements/: Linea.tsx  Parada.tsx
src/components/models/: Linea.tsx
src/components/views/: Favoritos.tsx  Lineas.tsx  Paradas.tsx
src/python/: pyproject.toml
src/python/src/: constants.py  main.py
src/python/src/core/interface/: cli.py  console.py
src/services/: Lineas.ts
src/views/: Favoritos.tsx  Lineas.tsx  Paradas.tsx
src/views/models/: Item.tsx  Linea.tsx  Parada.tsx
src/views/models/lineas/: Linea.tsx  LineaController.ts  LineaView.tsx
src/views/models/paradas/: Parada.tsx  ParadaController.ts  ParadaView.tsx
